# ComfyUI-SC-PhotoDoodle

./: README.md  __init__.py  nodes.py  prestartup_script.py  pyproject.toml
.github/workflows/: publish_action.yml
example_workflows/: photodoodle_speedv1.json  photodoodlev1.json
